# rex

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
completions/: _rex
src/rex/: __init__.py  __main__.py  cli.py  exceptions.py  output.py  utils.py
src/rex/commands/: build.py  connection.py  exec.py  gpus.py  info.py  jobs.py  read.py  run.py  transfer.py
src/rex/config/: __init__.py  alias.py  global_config.py  project.py  resolved.py
src/rex/execution/: __init__.py  base.py  direct.py  script.py  slurm.py
src/rex/ssh/: __init__.py  connection.py  executor.py  transfer.py
tests/: conftest.py  test_exceptions.py  test_output.py  test_utils.py
tests/commands/: test_build.py  test_exec.py  test_jobs.py  test_transfer.py
tests/config/: test_alias.py  test_global_config.py  test_merge.py  test_project.py
tests/execution/: test_direct.py  test_executor_contract.py  test_script.py  test_slurm.py
tests/integration/: Dockerfile  conftest.py  test_cli.py  test_cli_subprocess.py  test_docker_ssh.py
tests/ssh/: test_connection.py  test_executor.py  test_transfer.py
