[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rex"
version = "0.1.0"
description = "Remote execution tool for Python and shell commands"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
rex = "rex.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["src"]
