[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rex"
dynamic = ["version"]
description = "Remote execution tool for Python and shell commands"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
rex = "rex.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
tag_regex = "^v(?P<version>.*)$"
write_to = "src/rex/_version.py"
fallback_version = "0.0.0.dev0"
