[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rex"
dynamic = ["version"]
description = "Remote execution tool for Python and shell commands"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["tomli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Clustering",
    "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/hmblair/rex"
Repository = "https://github.com/hmblair/rex"

[project.scripts]
rex = "rex.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "mypy", "typing_extensions"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
tag_regex = "^v(?P<version>.*)$"
write_to = "src/rex/_version.py"
fallback_version = "0.0.0.dev0"
